# AmellCode-

./: LICENSE  README.md
AmellCode++/: CMakeLists.txt  CppHighlighter.cpp  CppHighlighter.h  Editor.cpp  Editor.h  MainWindow.cpp  MainWindow.h  moc_CppHighlighter.cpp  moc_Editor.cpp  moc_MainWindow.cpp
